[gd_scene load_steps=5 format=3 uid="uid://dt8jeingtjfoh"]

[ext_resource type="Script" path="res://environment/interactions/interaction-component.gd" id="1_4bmf5"]
[ext_resource type="PackedScene" uid="uid://c30m4otyx5tja" path="res://shared/resource-spawner.tscn" id="2_x4013"]
[ext_resource type="PackedScene" uid="uid://b5mwqxfb8xc6b" path="res://environment/decorations/particles/interaction-particle.tscn" id="3_0bedu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wxikl"]
radius = 50.0

[node name="InteractionComponent" type="Node2D"]
script = ExtResource("1_4bmf5")

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionRadius"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_wxikl")

[node name="ResourceSpawner" parent="." instance=ExtResource("2_x4013")]

[node name="InteractionParticle" parent="." instance=ExtResource("3_0bedu")]

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_detection_radius_body_exited"]
